<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:fillViewport="true">
  <RelativeLayout 
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content" android:background="#ffffff" >
  		
  		<!--  Header  Starts-->

  		<LinearLayout
  		    android:id="@+id/header"
  		    android:layout_width="fill_parent"
  		    android:layout_height="wrap_content"
  		    android:background="@layout/header_gradient"
  		    android:paddingBottom="5dip"
  		    android:paddingTop="5dip" >

  		    <!-- Logo Start -->

  		    <ImageView
  		        android:layout_width="0dp"
  		        android:layout_height="wrap_content"
  		        android:layout_marginLeft="10dip"
  		        android:layout_weight="0.83"
  		        android:src="@drawable/logo" />
  		    <!-- Logo Ends -->
  		</LinearLayout>

  		<!--  Header Ends -->  
  		<!-- Footer Start -->

  		<LinearLayout
  		    android:id="@+id/footer"
  		    android:layout_width="fill_parent"
  		    android:layout_height="90dip"
  		    android:layout_alignParentBottom="true"
  		    android:background="@layout/footer_repeat" >
		<ImageView
  		        android:layout_width="0dp"
  		        android:layout_height="wrap_content"
  		        android:layout_marginLeft="10dip"
  		        android:layout_weight="0.83"
  		        android:src="@drawable/logo" />
  		</LinearLayout>
  		<!-- Footer Ends -->
  		
  		<!-- Login Form -->

		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_below="@id/header"
		    android:orientation="vertical"
		    android:padding="10dip" >

		  <!--  Email Label -->
		  <TextView android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:textColor="#372c24"
		  		android:text="@string/login_username"/>

		  <EditText
		      android:id="@+id/login_username_textbox"
		      android:layout_width="fill_parent"
		      android:layout_height="wrap_content"
		      android:layout_marginBottom="20dip"
		      android:layout_marginTop="5dip"
		      android:inputType="text"
		      android:singleLine="true" >

		      <requestFocus />

		  </EditText>

		  <!--  Password Label -->
		  <TextView android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:textColor="#372c24"
		  		android:text="@string/login_password"/>

		  <EditText
		      android:id="@+id/login_password_textbox"
		      android:layout_width="fill_parent"
		      android:layout_height="wrap_content"
		      android:layout_marginTop="5dip"
		      android:inputType="textPassword"
		      android:singleLine="true" />

		  <!-- Login button -->	
		  <Button android:id="@+id/btnLogin" 
		  		android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:layout_marginTop="10dip"
		  		android:text="@string/login_login_submit"
		  		android:onClick="login"/>
		  <!-- Link to Registration Screen -->		

		  <TextView
		      android:id="@+id/login_error_message"
		      android:layout_width="fill_parent"
		      android:layout_height="wrap_content"
		      android:layout_marginBottom="40dip"
		      android:layout_marginTop="40dip"
		      android:gravity="center"
		      
		      android:textColor="#FF0000"
		      android:visibility="invisible" />
		    
		</LinearLayout>
  		<!-- Login Form Ends --> 		
  		
  </RelativeLayout>
</ScrollView>